rewrite service
add repo, db, cache

TODO: logger, tests, docker
