# docs/swagger.json
@@ -64,6 +64,53 @@
                 }
             }
         },
+        "/create": {
+            "post": {
+                "description": "create new wallet, returning uuid and amount",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "wallets"
+                ],
+                "summary": "CreateWallet",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.WalletResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/{uuid}": {
             "get": {
                 "description": "get amount by wallets uuid",
@@ -80,7 +127,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "WALLET_UUID",
+                        "description": "wallet_uuid",
                         "name": "uuid",
                         "in": "path"
                     }
@@ -89,7 +136,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.GetAmountResponse"
+                            "$ref": "#/definitions/dto.GetBalanceResponse"
                         }
                     },
                     "400": {
@@ -129,7 +176,7 @@
                 }
             }
         },
-        "dto.GetAmountResponse": {
+        "dto.GetBalanceResponse": {
             "type": "object",
             "properties": {
                 "amount": {
@@ -148,6 +195,17 @@
                 },
                 "walletUUID": {
                     "description": "так как используем UUID, поле решил тоже назвать UUID, а не ID",
+                    "type": "string"
+                }
+            }
+        },
+        "dto.WalletResponse": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "uuid": {
                     "type": "string"
                 }
             }
